# ytaudio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: geturls.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  urlworker.cpp  urlworker.h
